# ai-engineer-tutorials

./: README.md
src/01-claude-skills/.claude/skills/code-review/: SKILL.md
src/01-pgvector/: README.md  check_connection.py  docker-compose.yml  init.sql  main.py  pyproject.toml
src/01-pgvector/docs/: FAQ.md
src/02-ai-agents-from-scratch/: main.py  pyproject.toml
src/02-ai-agents-from-scratch/src/agent/: agent.py
src/02-ai-agents-lite-llm/: .env.example  .gitignore  01-basics.py  02-agent.py  03-agent-pydantic.py  README.md  pyproject.toml
src/02-ai-agents-lite-llm/.claude/: settings.local.json
src/02-faq-agent-langgraph/: README.md  pyproject.toml
src/02-faq-agent-langgraph/documents/: 1.md  2.md
src/02-faq-agent-langgraph/prompts/: faq_agent.md
src/02-faq-agent-langgraph/src/: agent.py  database.py
src/claude-skills/: .env-sample  01-claude-skills.py  02-custom-skills.py  README.md  pyproject.toml
src/claude-skills/.claude/skills/code-review/: SKILL.md
src/claude-skills/skills/veo/references/: cinematography.md
src/claude-skills/skills/veo3-image-prompt/: SKILL.md
src/claude-skills/skills/veo3-image-prompt/references/: advanced-workflows.md
